trunk/force-app/main/default/objects/Account/fields/engagio__Competitive_Intent_Keywords_longtext__c.field-meta.xml
<CustomField>
    <fullName>engagio__Competitive_Intent_Keywords_longtext__c</fullName>
    <label>Competitive Intent Keywords</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>