trunk/force-app/main/default/objects/Account/fields/engagio__CustomerDate__c.field-meta.xml
<CustomField>
    <fullName>engagio__CustomerDate__c</fullName>
    <description>Customer Date</description>
    <label>Customer Date</label>
    <type>DateTime</type>
</CustomField>