trunk/force-app/main/default/objects/Account/fields/engagio__EngagedPeople__c.field-meta.xml
<CustomField>
    <fullName>engagio__EngagedPeople__c</fullName>
    <description>Number of engaged people</description>
    <label>Engaged People</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>