trunk/force-app/main/default/objects/Account/fields/engagio__EngagementMinutesLast3Months__c.field-meta.xml
<CustomField>
    <fullName>engagio__EngagementMinutesLast3Months__c</fullName>
    <description>Engagement minutes in the last 3 months</description>
    <label>Engagement Minutes (3 mo.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>