trunk/force-app/main/default/objects/Account/fields/engagio__EngagementMinutesLast7Days__c.field-meta.xml
<CustomField>
    <fullName>engagio__EngagementMinutesLast7Days__c</fullName>
    <description>Engagement minutes in the last 7 days</description>
    <label>Engagement Minutes (7 days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>