trunk/force-app/main/default/objects/Account/fields/engagio__HighIntentKeywords__c.field-meta.xml
<CustomField>
    <fullName>engagio__HighIntentKeywords__c</fullName>
    <label>High Intent Keywords - legacy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>/</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>