trunk/force-app/main/default/objects/Account/fields/engagio__HighIntentKeywords_longtext__c.field-meta.xml
<CustomField>
    <fullName>engagio__HighIntentKeywords_longtext__c</fullName>
    <label>High Intent Keywords</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>