trunk/force-app/main/default/objects/Account/fields/engagio__NumberOfPeople__c.field-meta.xml
<CustomField>
    <fullName>engagio__NumberOfPeople__c</fullName>
    <label>Number of People</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>