trunk/force-app/main/default/objects/Account/fields/engagio__PipelineDate__c.field-meta.xml
<CustomField>
    <fullName>engagio__PipelineDate__c</fullName>
    <description>Pipeline Date</description>
    <label>Pipeline Date</label>
    <type>DateTime</type>
</CustomField>