trunk/force-app/main/default/objects/Account/fields/engagio__Status__c.field-meta.xml
<CustomField>
    <fullName>engagio__Status__c</fullName>
    <description>Status</description>
    <label>Demandbase Journey Stage</label>
    <length>120</length>
    <type>Text</type>
</CustomField>