trunk/force-app/main/default/objects/Account/fields/engagio__Top_Web_Traffic_URLs__c.field-meta.xml
<CustomField>
    <fullName>engagio__Top_Web_Traffic_URLs__c</fullName>
    <label>Top Web Traffic URLs (14 days)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>