trunk/force-app/main/default/objects/Account/fields/engagio__WebVisitsLast3Months__c.field-meta.xml
<CustomField>
    <fullName>engagio__WebVisitsLast3Months__c</fullName>
    <description>Web visits in the last 3 months</description>
    <label>Web Traffic (3 mo.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>